--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,6 @@ export(filter_outliers)
 export(find_tissue_outliers)
 export(preprocess_with_tukey)
 export(u_statistic)
-import(entropy)
 importFrom(affy,tukey.biweight)
+importFrom(entropy,entropy)
 importFrom(parallel,mclapply)
